--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@ html, body { height: 100%; }
   width: 100%;
   height: 100%;
   background: rgb(86, 186, 105);
+  position: relative;
+  overflow: hidden;
 }
 
 .tile {
