--- a/css/main.css
+++ b/css/main.css
@@ -11,21 +11,24 @@ p {
   font-family: sans-serif;
 }
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  width: 100%;
+  display: table;
+}
 
 .header {
-  width: 100%;
   height: 50px;
   background: rgb(172, 222, 247);
   border-bottom: 3px solid rgb(91, 88, 255);
+  display: table-row;
 }
 
 .board {
-  width: 100%;
   height: 100%;
   background: rgb(86, 186, 105);
-  position: relative;
   overflow: hidden;
+  position: relative;
 }
 
 .tile {
