--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,9 @@ html, body {
 .header {
   height: 50px;
   background: rgb(172, 222, 247);
-  border-bottom: 3px solid rgb(91, 88, 255);
+  border-bottom: 3px solid rgb(91, 88, 255);;
   display: table-row;
+  display: none;
 }
 
 .board {
@@ -33,8 +34,8 @@ html, body {
 
 .tile {
   background-color: beige;
-  background-image: url('../img/test-tile.svg');
-  background-size: 100% 100%;
+  background-image: url('../img/tileset01.svg');
+  background-size: 600% 600%;
   border-radius: 10px;
   border-bottom: 5px solid gray;
   border-right: 5px solid gray;
