--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ html, body {
   border-bottom: 5px solid gray;
   border-right: 5px solid gray;
   position: absolute;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
 .tile:hover {
