--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,10 @@ html, body {
   background-image: url('../img/tileset01.svg');
   background-size: 600% 600%;
   position: absolute;
-  border-top: 1px solid gray;
-  border-left: 1px solid gray;
-  border-bottom: 1px solid lightgray;
-  border-right: 1px solid lightgray;
+  border-top: 1px solid lightgray;
+  border-left: 1px solid lightgray;
+  border-bottom: 1px solid gray;
+  border-right: 1px solid gray;
   box-sizing: border-box;
 }
 
